Fix dark mode for modal in services page

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -458,10 +458,20 @@ h1, h2, h3, h4, h5, h6 {
     color: #fff;
 }
 
-[data-theme="dark"] .card {
+[data-theme="dark"] .card,
+[data-theme="dark"] .modal-content {
     background-color: #16213e;
     color: var(--text-dark);
     border: 1px solid rgba(255,255,255,0.05) !important;
+}
+
+[data-theme="dark"] .modal-header,
+[data-theme="dark"] .modal-footer {
+    border-color: rgba(255, 255, 255, 0.1);
+}
+
+[data-theme="dark"] .btn-close {
+    filter: invert(1) grayscale(100%) brightness(200%);
 }
 
 [data-theme="dark"] .bg-light {
